--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --primary: #20c20e;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,6 +18,7 @@
 }
 
 body {
+  font-family: 'Courier New', Courier, monospace;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
